# mqtt2postgres

./: Cargo.toml  Dockerfile
.sqlx/: query-94ed93f6adea66792f80c816ee02e1ebf5b9d0074bd78b3d3c371f4bd4fbd77d.json
migrations/: 20241016053939_home.sql
src/: main.rs
