[package]
name = "mqtt2postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
clap_derive = "4.5"

tracing = "0.1"
tracing-subscriber = "0.3"

rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
tokio = { version = "1.38", features = ["full"] }
chrono = "0.4.38"
thiserror = "1.0.64"
anyhow = "1.0.89"

sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }